// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plot Settings component > snapshots > renders plot settings form correctly (timeseries plot) 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column css-wtd0ln-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-plotsettingstextfield
        data-testid="mock-plotSettingsTextField"
      >
        label="Title"
value="Initial title"
onChange=undefined

      </mock-plotsettingstextfield>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-charttypebuttons
        data-testid="mock-chartTypeButtons"
      >
        plotType="scatter"
changePlotType=undefined
XAxis="timestamp"
changeXAxis=undefined

      </mock-charttypebuttons>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-yu75kd-MuiGrid-root"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-fzgmul-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
        >
          Skip Non-Business Hours
        </span>
      </label>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded css-1grhrv9-MuiPaper-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1roi170-MuiTypography-root"
        >
          X Axis Config
        </p>
        <mock-xaxistab
          data-testid="mock-xAxisTab"
        >
          allChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "shotnum",
    "name": "Shot Number",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_area",
    "name": "Active Area",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_experiment",
    "name": "Active Experiment",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "CHANNEL_ABCDE",
    "name": "Channel_ABCDE",
    "path": "/Channels/1",
    "type": "scalar"
  },
  {
    "systemName": "CHANNEL_DEFGH",
    "name": "Channel_DEFGH",
    "path": "/Channels/2",
    "type": "scalar",
    "notation": "scientific",
    "precision": 2
  },
  {
    "systemName": "CHANNEL_GHIJK",
    "name": "Channel_GHIJK",
    "path": "/Channels/3",
    "type": "scalar"
  }
]
XAxisScale="date"
XAxis="timestamp"
changeXAxis=undefined
changeXAxisScale=undefined
initialXMinimum=undefined
initialXMaximum=undefined
changeXMinimum=undefined
changeXMaximum=undefined

        </mock-xaxistab>
      </div>
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded css-s6ed6x-MuiPaper-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1roi170-MuiTypography-root"
        >
          Y Axes Config
        </p>
        <mock-yaxistab
          data-testid="mock-yAxisTab"
        >
          selectedRecordTableChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system"
  }
]
allChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "shotnum",
    "name": "Shot Number",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_area",
    "name": "Active Area",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_experiment",
    "name": "Active Experiment",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "CHANNEL_ABCDE",
    "name": "Channel_ABCDE",
    "path": "/Channels/1",
    "type": "scalar"
  },
  {
    "systemName": "CHANNEL_DEFGH",
    "name": "Channel_DEFGH",
    "path": "/Channels/2",
    "type": "scalar",
    "notation": "scientific",
    "precision": 2
  },
  {
    "systemName": "CHANNEL_GHIJK",
    "name": "Channel_GHIJK",
    "path": "/Channels/3",
    "type": "scalar"
  }
]
selectedPlotChannels=[]
changeSelectedPlotChannels=undefined
initialLeftYAxisMinimum=undefined
initialLeftYAxisMaximum=undefined
changeLeftYAxisMinimum=undefined
changeLeftYAxisMaximum=undefined
initialRightYAxisMinimum=undefined
initialRightYAxisMaximum=undefined
changeRightYAxisMinimum=undefined
changeRightYAxisMaximum=undefined
leftYAxisScale="log"
changeLeftYAxisScale=undefined
rightYAxisScale="linear"
changeRightYAxisScale=undefined
leftYAxisLabel="left y axis label"
changeLeftYAxisLabel=undefined
rightYAxisLabel="right y axis label"
changeRightYAxisLabel=undefined
initialSelectedColours=[]
initialRemainingColours=[]
changeSelectedColours=undefined
changeRemainingColours=undefined

        </mock-yaxistab>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plot Settings component > snapshots > renders plot settings form correctly (x-axis tab selected) 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column css-wtd0ln-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-plotsettingstextfield
        data-testid="mock-plotSettingsTextField"
      >
        label="Title"
value="Initial title"
onChange=undefined

      </mock-plotsettingstextfield>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-charttypebuttons
        data-testid="mock-chartTypeButtons"
      >
        plotType="scatter"
changePlotType=undefined
XAxis="test x-axis"
changeXAxis=undefined

      </mock-charttypebuttons>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-1gsv261"
      >
        <div
          class="MuiTabs-root css-128t5ib-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-s2t35c-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              aria-label="tabs"
              class="MuiTabs-list MuiTabs-flexContainer css-hzcega-MuiTabs-list"
              role="tablist"
            >
              <button
                aria-controls="X-tabpanel"
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1fk19lt-MuiButtonBase-root-MuiTab-root"
                id="X-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                X
              </button>
              <button
                aria-controls="Y-tabpanel"
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1fk19lt-MuiButtonBase-root-MuiTab-root"
                id="Y-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Y
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1qltlow-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-labelledby="X-tab"
        id="X-tabpanel"
        role="tabpanel"
      >
        <div
          class="MuiBox-root css-0"
        >
          <mock-xaxistab
            data-testid="mock-xAxisTab"
          >
            allChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "shotnum",
    "name": "Shot Number",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_area",
    "name": "Active Area",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_experiment",
    "name": "Active Experiment",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "CHANNEL_ABCDE",
    "name": "Channel_ABCDE",
    "path": "/Channels/1",
    "type": "scalar"
  },
  {
    "systemName": "CHANNEL_DEFGH",
    "name": "Channel_DEFGH",
    "path": "/Channels/2",
    "type": "scalar",
    "notation": "scientific",
    "precision": 2
  },
  {
    "systemName": "CHANNEL_GHIJK",
    "name": "Channel_GHIJK",
    "path": "/Channels/3",
    "type": "scalar"
  }
]
XAxisScale="linear"
XAxis="test x-axis"
changeXAxis=undefined
changeXAxisScale=undefined
initialXMinimum=undefined
initialXMaximum=undefined
changeXMinimum=undefined
changeXMaximum=undefined

          </mock-xaxistab>
        </div>
      </div>
      <div
        aria-labelledby="Y-tab"
        hidden=""
        id="Y-tabpanel"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plot Settings component > snapshots > renders plot settings form correctly (y-axis tab selected) 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column css-wtd0ln-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-plotsettingstextfield
        data-testid="mock-plotSettingsTextField"
      >
        label="Title"
value="Initial title"
onChange=undefined

      </mock-plotsettingstextfield>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-charttypebuttons
        data-testid="mock-chartTypeButtons"
      >
        plotType="scatter"
changePlotType=undefined
XAxis="test x-axis"
changeXAxis=undefined

      </mock-charttypebuttons>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-1gsv261"
      >
        <div
          class="MuiTabs-root css-128t5ib-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-s2t35c-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              aria-label="tabs"
              class="MuiTabs-list MuiTabs-flexContainer css-hzcega-MuiTabs-list"
              role="tablist"
            >
              <button
                aria-controls="X-tabpanel"
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1fk19lt-MuiButtonBase-root-MuiTab-root"
                id="X-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                X
              </button>
              <button
                aria-controls="Y-tabpanel"
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1fk19lt-MuiButtonBase-root-MuiTab-root"
                id="Y-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                Y
                <span
                  class="MuiTouchRipple-root css-r3djoj-MuiTouchRipple-root"
                >
                  <span
                    class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                    style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
                  >
                    <span
                      class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                    />
                  </span>
                </span>
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1qltlow-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-labelledby="X-tab"
        hidden=""
        id="X-tabpanel"
        role="tabpanel"
      />
      <div
        aria-labelledby="Y-tab"
        id="Y-tabpanel"
        role="tabpanel"
      >
        <div
          class="MuiBox-root css-0"
        >
          <mock-yaxistab
            data-testid="mock-yAxisTab"
          >
            selectedRecordTableChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system"
  }
]
allChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "shotnum",
    "name": "Shot Number",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_area",
    "name": "Active Area",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "active_experiment",
    "name": "Active Experiment",
    "type": "scalar",
    "path": "/system"
  },
  {
    "systemName": "CHANNEL_ABCDE",
    "name": "Channel_ABCDE",
    "path": "/Channels/1",
    "type": "scalar"
  },
  {
    "systemName": "CHANNEL_DEFGH",
    "name": "Channel_DEFGH",
    "path": "/Channels/2",
    "type": "scalar",
    "notation": "scientific",
    "precision": 2
  },
  {
    "systemName": "CHANNEL_GHIJK",
    "name": "Channel_GHIJK",
    "path": "/Channels/3",
    "type": "scalar"
  }
]
selectedPlotChannels=[]
changeSelectedPlotChannels=undefined
initialLeftYAxisMinimum=undefined
initialLeftYAxisMaximum=undefined
changeLeftYAxisMinimum=undefined
changeLeftYAxisMaximum=undefined
initialRightYAxisMinimum=undefined
initialRightYAxisMaximum=undefined
changeRightYAxisMinimum=undefined
changeRightYAxisMaximum=undefined
leftYAxisScale="log"
changeLeftYAxisScale=undefined
rightYAxisScale="linear"
changeRightYAxisScale=undefined
leftYAxisLabel="left y axis label"
changeLeftYAxisLabel=undefined
rightYAxisLabel="right y axis label"
changeRightYAxisLabel=undefined
initialSelectedColours=[]
initialRemainingColours=[]
changeSelectedColours=undefined
changeRemainingColours=undefined

          </mock-yaxistab>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
